# cc-monitor

./: CLAUDE.md  Cargo.toml  README.MD
src/: data_loader.rs  main.rs
src/cli/: mod.rs
src/commands/: daily.rs  mod.rs  monthly.rs  sessions.rs  status.rs  statusline.rs
src/models/: mod.rs  pricing.rs  usage.rs
src/tui/: app.rs  dashboard.rs  mod.rs
