[package]
name = "cc-monitor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "Monitor Claude Code usage with an interactive dashboard"
license = "MIT"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
glob = "0.3"

# CLI and TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for fetching pricing
reqwest = { version = "0.12", features = ["json"] }
